--- a/src/app/admin/integrated/extend/openapi/openapi.component.html
+++ b/src/app/admin/integrated/extend/openapi/openapi.component.html
@@ -1,27 +1,27 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired i18n>地址</nz-form-label>
-    <nz-form-control nzHasFeedback [nzAutoTips]="tips.OpenapiUrl">
-      <input nz-input formControlName="OpenapiUrl" placeholder="请输入地址" i18n-placeholder />
-    </nz-form-control>
-  </nz-form-item>
-  <nz-form-item>
-    <nz-form-label nzRequired i18n>应用 Key</nz-form-label>
+    <nz-form-label nzRequired i18n>App Key</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.OpenapiKey">
-      <input nz-input formControlName="OpenapiKey" placeholder="请输入应用 Key" i18n-placeholder />
+      <input nz-input formControlName="OpenapiKey" placeholder="请输入 App Key" i18n-placeholder />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired i18n>应用密钥</nz-form-label>
+    <nz-form-label nzRequired i18n>App Secret</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.OpenapiSecret">
       <input
         nz-input
         type="password"
         autocomplete="new-password"
         formControlName="OpenapiSecret"
-        placeholder="请输入应用密钥"
+        placeholder="请输入 App Secret"
         i18n-placeholder
       />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label nzRequired i18n>地址</nz-form-label>
+    <nz-form-control nzHasFeedback [nzAutoTips]="tips.OpenapiUrl">
+      <input nz-input formControlName="OpenapiUrl" placeholder="请输入地址" i18n-placeholder />
     </nz-form-control>
   </nz-form-item>
 </form>
