--- a/src/common/components/nav/profile/phone/phone.component.html
+++ b/src/common/components/nav/profile/phone/phone.component.html
@@ -1,22 +1,30 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-control [nzAutoTips]="tips.phone">
-      <nz-input-group nzCompact>
-        <nz-select formControlName="area" style="width: 30%" nzPlaceHolder="区号">
-          <nz-option [nzLabel]="'+86 中国'" [nzValue]="'+86'"></nz-option>
-        </nz-select>
-        <input type="text" nz-input formControlName="phone" style="width: 70%" placeholder="手机号码" />
-      </nz-input-group>
+    <nz-form-label nzRequired i18n> 区号 </nz-form-label>
+    <nz-form-control>
+      <nz-select formControlName="area" nzPlaceHolder="请选择区号">
+        <nz-option [nzLabel]="'+86 中国'" [nzValue]="'+86'"></nz-option>
+      </nz-select>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
+    <nz-form-label nzRequired i18n> 手机号码 </nz-form-label>
+    <nz-form-control [nzAutoTips]="tips.phone">
+      <input nz-input formControlName="phone" placeholder="请输入手机号码" />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label nzRequired i18n> 验证码 </nz-form-label>
     <nz-form-control [nzAutoTips]="tips.code">
       <nz-row [nzGutter]="8">
         <nz-col [nzSpan]="12">
-          <input nz-input formControlName="code" placeholder="验证码" />
+          <input nz-input formControlName="code" placeholder="请输入验证码" />
         </nz-col>
         <nz-col [nzSpan]="12">
-          <button nz-button type="button">获取</button>
+          <button nz-button type="button" [disabled]="!form.get('phone')?.value || timer !== 0" (click)="getCode()">
+            <ng-container *ngIf="timer === 0; else timerText">获取</ng-container>
+            <ng-template #timerText>{{ timer }} 秒</ng-template>
+          </button>
         </nz-col>
       </nz-row>
     </nz-form-control>
