update: sms login

--- a/src/app/audit/logined/logined.component.html
+++ b/src/app/audit/logined/logined.component.html
@@ -132,8 +132,10 @@
   <ng-template #source let-data>
     <ng-container [ngSwitch]="data.metadata.source">
       <ng-container *ngSwitchCase="'email'">电子邮件</ng-container>
+      <ng-container *ngSwitchCase="'sms'">短信验证</ng-container>
       <ng-container *ngSwitchCase="'totp'">动态口令</ng-container>
-      <ng-container *ngSwitchCase="'lark'">Lark / Feishu</ng-container>
+      <ng-container *ngSwitchCase="'lark'">Lark / 飞书</ng-container>
+      <ng-container *ngSwitchDefault>其他测试</ng-container>
     </ng-container>
   </ng-template>
   <ng-template #user let-data>
