--- a/src/app/login/sms/sms.component.html
+++ b/src/app/login/sms/sms.component.html
@@ -10,13 +10,16 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-control [nzAutoTips]="tips.captcha">
+    <nz-form-control [nzAutoTips]="tips.code">
       <nz-row [nzGutter]="8">
         <nz-col [nzSpan]="12">
           <input nz-input formControlName="code" placeholder="验证码" />
         </nz-col>
         <nz-col [nzSpan]="12">
-          <button nz-button>获取</button>
+          <button nz-button type="button" [disabled]="!form.get('phone')?.value || timer !== 0" (click)="getCode()">
+            <ng-container *ngIf="timer === 0; else timerText">获取</ng-container>
+            <ng-template #timerText>{{ timer }} 秒</ng-template>
+          </button>
         </nz-col>
       </nz-row>
     </nz-form-control>
