update: cluster & dataset

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -29,9 +29,9 @@
           <span nz-icon nzType="thunderbolt" nzTheme="outline"></span>
           <span>即时通信</span>
         </li>
-        <li nz-menu-item nzMatchRouter routerLink="logset">
+        <li nz-menu-item nzMatchRouter routerLink="dataset">
           <span nz-icon nzType="database" nzTheme="outline"></span>
-          <span>日志采集</span>
+          <span>数据集合</span>
         </li>
 
         <li nz-menu-item nzMatchRouter routerLink="observability">
