--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -13,15 +13,9 @@
           <span nz-icon nzType="project" nzTheme="outline"></span>
           <span>项目</span>
         </li>
-        <li nz-submenu nzTitle="集群" nzIcon="cluster">
-          <ul>
-            <li nz-menu-item nzMatchRouter routerLink="clusters/kubernetes">
-              <span>Kubernetes</span>
-            </li>
-            <li nz-menu-item nzDisabled>
-              <span>Agent</span>
-            </li>
-          </ul>
+        <li nz-menu-item nzMatchRouter routerLink="clusters">
+          <span nz-icon nzType="cluster" nzTheme="outline"></span>
+          <span>集群</span>
         </li>
         <li nz-menu-item nzMatchRouter routerLink="workflows">
           <span nz-icon nzType="schedule" nzTheme="outline"></span>
