--- a/src/app/admin/clusters/clusters.component.html
+++ b/src/app/admin/clusters/clusters.component.html
@@ -1,67 +1,74 @@
-<nz-page-header style="margin: -8px -8px 0 -8px" [nzGhost]="false">
-  <nz-page-header-title>
-    <ng-container *ngIf="context; else notContextText">集群上下文</ng-container>
-    <ng-template #notContextText>集群列表</ng-template>
-  </nz-page-header-title>
-  <nz-page-header-subtitle *ngIf="context && itemDict[context] as v">
-    <nz-tag>{{ v.name }}</nz-tag>
-  </nz-page-header-subtitle>
-  <nz-page-header-extra>
-    <nz-space nzAlign="center">
-      <button *nzSpaceItem nz-button nzType="primary" nzShape="circle" (click)="form()">
-        <span nz-icon nzType="plus"></span>
-      </button>
-      <ng-container *ngIf="context">
-        <button *nzSpaceItem nz-button nzShape="circle" nz-dropdown [nzDropdownMenu]="actions">
-          <span nz-icon nzType="more"></span>
+<nz-layout style="height: calc(100% + 16px); margin: -8px">
+  <nz-page-header [nzGhost]="false">
+    <nz-page-header-title>
+      <ng-container *ngIf="context; else notContextText">集群上下文</ng-container>
+      <ng-template #notContextText>集群列表</ng-template>
+    </nz-page-header-title>
+    <nz-page-header-subtitle *ngIf="context && itemDict[context] as v">
+      <nz-tag>{{ v.name }}</nz-tag>
+    </nz-page-header-subtitle>
+    <nz-page-header-extra>
+      <nz-space nzAlign="center">
+        <button *nzSpaceItem nz-button nzType="primary" nzShape="circle" (click)="form()">
+          <span nz-icon nzType="plus"></span>
         </button>
-      </ng-container>
-    </nz-space>
-  </nz-page-header-extra>
-  <nz-page-header-content *ngIf="!context">
-    <nz-space nzAlign="center">
-      <nz-input-group *nzSpaceItem style="width: 220px" nzSuffixIcon="search">
-        <input
-          [(ngModel)]="searchText"
-          (keyup.enter)="getData()"
-          type="text"
-          nz-input
-          placeholder="搜索"
-          i18n-placeholder
-        />
-      </nz-input-group>
-      <nz-button-group *nzSpaceItem>
-        <button nz-button nzType="text" nz-tooltip="刷新" i18n-nz-tooltip (click)="getData()">
-          <i nz-icon nzType="reload"></i>
-        </button>
-        <button nz-button nzType="text" nz-tooltip="重置" i18n-nz-tooltip (click)="clearSearch()">
-          <i nz-icon nzType="clear"></i>
-        </button>
-      </nz-button-group>
-    </nz-space>
-  </nz-page-header-content>
-  <nz-page-header-footer *ngIf="context">
-    <nz-tabset nzLinkRouter>
-      <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'clusters', context, 'nodes']"> 节点 </a>
-      </nz-tab>
-      <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'clusters', context, 'ingresses']"> 入口 </a>
-      </nz-tab>
-    </nz-tabset>
-  </nz-page-header-footer>
-</nz-page-header>
+        <ng-container *ngIf="context">
+          <button *nzSpaceItem nz-button nzShape="circle" nz-dropdown [nzDropdownMenu]="actions">
+            <span nz-icon nzType="more"></span>
+          </button>
+        </ng-container>
+      </nz-space>
+    </nz-page-header-extra>
+    <nz-page-header-content *ngIf="!context">
+      <nz-space nzAlign="center">
+        <nz-input-group *nzSpaceItem style="width: 220px" nzSuffixIcon="search">
+          <input
+            [(ngModel)]="searchText"
+            (keyup.enter)="getData()"
+            type="text"
+            nz-input
+            placeholder="搜索"
+            i18n-placeholder
+          />
+        </nz-input-group>
+        <nz-button-group *nzSpaceItem>
+          <button nz-button nzType="text" nz-tooltip="刷新" i18n-nz-tooltip (click)="getData()">
+            <i nz-icon nzType="reload"></i>
+          </button>
+          <button nz-button nzType="text" nz-tooltip="重置" i18n-nz-tooltip (click)="clearSearch()">
+            <i nz-icon nzType="clear"></i>
+          </button>
+        </nz-button-group>
+      </nz-space>
+    </nz-page-header-content>
+    <nz-page-header-footer *ngIf="context">
+      <nz-tabset nzLinkRouter>
+        <nz-tab>
+          <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'clusters', context, 'nodes']"> 节点 </a>
+        </nz-tab>
+        <nz-tab>
+          <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'clusters', context, 'ingresses']"> 入口 </a>
+        </nz-tab>
+      </nz-tabset>
+    </nz-page-header-footer>
+  </nz-page-header>
 
-<nz-content style="padding-top: 8px">
-  <ng-container *ngIf="context; else notContextRef">
-    <router-outlet></router-outlet>
-  </ng-container>
-</nz-content>
+  <nz-content style="height: 100%; padding: 8px; overflow: hidden auto">
+    <ng-container *ngIf="context; else notContextRef">
+      <router-outlet></router-outlet>
+    </ng-container>
+  </nz-content>
+</nz-layout>
 
 <ng-template #notContextRef>
   <nz-row [nzGutter]="[8, 8]">
     <nz-col *ngFor="let item of items" [nzSpan]="12">
-      <nz-card nzHoverable (click)="open(item._id)" (contextmenu)="openMenu($event, item, actions)">
+      <nz-card
+        nzHoverable
+        [nzLoading]="!itemDict[item._id]"
+        (click)="open(item._id)"
+        (contextmenu)="openMenu($event, item, actions)"
+      >
         <ng-template #titleRef>
           {{ item.name }}
           <nz-tag nzColor="blue">
@@ -73,11 +80,14 @@
           nzLayout="vertical"
           nzSize="small"
           [nzTitle]="titleRef"
-          [nzColumn]="3"
+          [nzColumn]="4"
         >
-          <nz-descriptions-item nzTitle="Version"> {{ v.version }}</nz-descriptions-item>
-          <nz-descriptions-item nzTitle="Platform"> {{ v.platform }}</nz-descriptions-item>
-          <nz-descriptions-item nzTitle="Nodes"> {{ v.nodes }} </nz-descriptions-item>
+          <nz-descriptions-item nzTitle="版本"> {{ v.version }}</nz-descriptions-item>
+          <nz-descriptions-item nzTitle="平台"> {{ v.platform }}</nz-descriptions-item>
+          <nz-descriptions-item nzTitle="节点"> {{ v.nodes }} </nz-descriptions-item>
+          <nz-descriptions-item nzTitle="Cpu / 内存 / 存储">
+            {{ v.cpu }} / {{ v.mem | nzBytes }} / {{ v.storage | nzBytes }}
+          </nz-descriptions-item>
         </nz-descriptions>
       </nz-card>
     </nz-col>
