--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -29,7 +29,7 @@
           <span nz-icon nzType="thunderbolt" nzTheme="outline"></span>
           <span>即时通信</span>
         </li>
-        <li nz-menu-item nzMatchRouter routerLink="dataset">
+        <li nz-menu-item nzMatchRouter routerLink="datasets">
           <span nz-icon nzType="database" nzTheme="outline"></span>
           <span>数据集合</span>
         </li>
