--- a/src/app/admin/datasets/controls/controls.component.html
+++ b/src/app/admin/datasets/controls/controls.component.html
@@ -1,42 +1,94 @@
-<form *ngIf="form" nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
-  <nz-form-item>
-    <nz-form-label nzRequired>允许访问</nz-form-label>
-    <nz-form-control>
-      <nz-switch formControlName="Status"></nz-switch>
-    </nz-form-control>
-  </nz-form-item>
-  <nz-form-item>
-    <nz-form-label nzRequired>事件回调</nz-form-label>
-    <nz-form-control>
-      <nz-switch formControlName="Event"></nz-switch>
-    </nz-form-control>
-  </nz-form-item>
+<nz-layout style="height: 100%; background: transparent">
+  <nz-page-header>
+    <nz-page-header-title>字段管理</nz-page-header-title>
+    <nz-page-header-tags>
+      <nz-tag>{{ name }}</nz-tag>
+    </nz-page-header-tags>
+    <nz-page-header-extra>
+      <button nz-button nzType="primary" form="form" nzShape="circle" [disabled]="!form.valid">
+        <span nz-icon nzType="check" nzTheme="outline"></span>
+      </button>
+    </nz-page-header-extra>
+    <nz-page-header-footer>
+      <nz-tabset nzSize="small" [(nzSelectedIndex)]="index">
+        <nz-tab nzTitle="投影设置"></nz-tab>
+        <nz-tab nzTitle="脱敏设置"></nz-tab>
+      </nz-tabset>
+    </nz-page-header-footer>
+  </nz-page-header>
 
-  <nz-divider nzPlain nzText="投影限制"></nz-divider>
-
-  <div formArrayName="Keys">
-    <ng-container *ngFor="let x of keys.controls; index as i; first as isFirst">
-      <nz-input-group nzCompact [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
-        <input
-          style="width: 90%"
-          type="text"
-          nz-input
-          [formControlName]="i"
-          placeholder="请输入字段名称"
-          i18n-placeholder
-        />
-        <button nz-button type="button" nzType="default" style="width: 10%" (click)="remove(i)">
-          <i nz-icon nzType="minus-circle"></i>
+  <nz-content style="overflow: hidden auto">
+    <form [ngSwitch]="index" nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
+      <nz-card *ngSwitchCase="0">
+        <nz-table formArrayName="Keys" nzSize="middle" nzTemplateMode>
+          <thead>
+            <tr>
+              <th nzWidth="60px"></th>
+              <th><b>字段名称</b></th>
+              <th nzWidth="60px" nzAlign="center">
+                <button nz-button type="button" nzType="text" nz-tooltip="清空字段" (click)="keys.clear()">
+                  <span nz-icon nzType="rest" nzTheme="outline"></span>
+                </button>
+              </th>
+            </tr>
+          </thead>
+          <tbody cdkDropList (cdkDropListDropped)="sort($event, keys)">
+            <tr *ngFor="let x of keys.controls; index as i" cdkDrag>
+              <td nzAlign="center">
+                <button nz-button type="button" nzType="text" cdkDragHandle>
+                  <span nz-icon nzType="holder" nzTheme="outline"></span>
+                </button>
+              </td>
+              <td>
+                <input style="width: 100%" nzBorderless nz-input [formControlName]="i" placeholder="请输入字段名称" />
+              </td>
+              <td nzAlign="center">
+                <button nz-button type="button" nzType="text" (click)="removeKey(i)">
+                  <i nz-icon nzType="minus-circle"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </nz-table>
+        <button nzBlock type="button" nzType="text" nzSize="large" nz-button (click)="appendKey()">
+          <i nz-icon nzType="plus-circle"></i> 新增
         </button>
-      </nz-input-group>
-    </ng-container>
-    <button style="margin-top: 8px" nzBlock type="button" nz-button nzType="dashed" (click)="append()" i18n>
-      <i nz-icon nzType="plus-circle"></i> 新增
-    </button>
-  </div>
-</form>
-
-<div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
-</div>
+      </nz-card>
+      <nz-card *ngSwitchCase="1">
+        <nz-table formArrayName="Sensitives" nzSize="middle" nzTemplateMode>
+          <thead>
+            <tr>
+              <th nzWidth="60px"></th>
+              <th><b>字段名称</b></th>
+              <th nzWidth="60px" nzAlign="center">
+                <button nz-button type="button" nzType="text" nz-tooltip="清空字段" (click)="sensitives.clear()">
+                  <span nz-icon nzType="rest" nzTheme="outline"></span>
+                </button>
+              </th>
+            </tr>
+          </thead>
+          <tbody cdkDropList (cdkDropListDropped)="sort($event, sensitives)">
+            <tr *ngFor="let x of sensitives.controls; index as i" cdkDrag>
+              <td nzAlign="center">
+                <button nz-button type="button" nzType="text" cdkDragHandle>
+                  <span nz-icon nzType="holder" nzTheme="outline"></span>
+                </button>
+              </td>
+              <td>
+                <input style="width: 100%" nzBorderless nz-input [formControlName]="i" placeholder="请输入字段名称" />
+              </td>
+              <td nzAlign="center">
+                <button nz-button type="button" nzType="text" (click)="removeSensitive(i)">
+                  <i nz-icon nzType="minus-circle"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </nz-table>
+        <button nzBlock type="button" nzType="text" nzSize="large" nz-button (click)="appendSensitive()">
+          <i nz-icon nzType="plus-circle"></i> 新增
+        </button>
+      </nz-card>
+    </form>
+  </nz-content>
+</nz-layout>
