--- a/src/app/admin/workflows/form/form.component.html
+++ b/src/app/admin/workflows/form/form.component.html
@@ -6,9 +6,26 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
+    <nz-form-label nzRequired> 所属项目 </nz-form-label>
+    <nz-form-control nzHasFeedback [nzAutoTips]="tips.project">
+      <nz-select
+        formControlName="project"
+        nzAllowClear
+        nzPlaceHolder="请选择所属项目"
+        nzShowSearch
+        nzServerSearch
+        (nzOnSearch)="projects$.next($event)"
+      >
+        <ng-container *ngFor="let item of projectItems">
+          <nz-option [nzValue]="item._id" [nzLabel]="item.name"> </nz-option>
+        </ng-container>
+      </nz-select>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
     <nz-form-label nzRequired> 工作流类型 </nz-form-label>
-    <nz-form-control nzHasFeedback>
-      <nz-select formControlName="kind" nzAllowClear>
+    <nz-form-control nzHasFeedback [nzAutoTips]="tips.kind">
+      <nz-select formControlName="kind" nzAllowClear nzPlaceHolder="请选择工作流类型">
         <nz-option nzValue="schedule" nzLabel="定时回调"></nz-option>
       </nz-select>
     </nz-form-control>
